# django-forms

./: db.sqlite3  pyproject.toml
accounts/: admin.py  forms.py  models.py
cinema/: admin.py  forms.py  models.py  parser.py  urls.py  views.py
cinema/migrations/: 0001_initial.py  0002_book_alter_serie_title.py  0003_tvparser.py
main/: settings.py  urls.py
parser/: admin.py  forms.py  models.py  parser.py  urls.py  views.py
parser/migrations/: 0001_initial.py  0002_laptop_title_text.py
templates/: base.html  confirm_delete.html  detail.html  film_list.html  forms.html  index.html  laptop_list.html  update.html
