[tool.poetry]
name = "additional-task"
version = "0.1.0"
description = ""
authors = ["Aikanysh <lailievaa02@gmail.com>"]
readme = "README.md"
packages = [{include = "additional_task"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.3"
pillow = "^9.3.0"
beautifulsoup4 = "^4.11.1"
requests = "^2.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
